gitops_ingress/gitops-ingress-controller.yaml
'''
cat <<EOT | kubectl apply -f -
'''
---
#GITOpS Ingress Controller - Ingress
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:713745958112:certificate/4210d4fc-eb24-458b-b2ee-4585f0597b25
    alb.ingress.kubernetes.io/group.name: aws-load-balancer-controller
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTPS
    #alb.ingress.kubernetes.io/inbound-cidrs: 10.0.0.0/16, 35.80.160.129/32
    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 3443}]'
    alb.ingress.kubernetes.io/manage-backend-security-group-rules: "true"
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/security-groups: sg-07b50b1828b7e5f53,sg-038defe967d41af3d,sg-05a1424bec076e55c,sg-0495853efd8389edb
    alb.ingress.kubernetes.io/success-codes: 200-399
    alb.ingress.kubernetes.io/target-type: instance
    kubernetes.io/ingress.class: alb
  finalizers:
  - group.ingress.k8s.aws/aws-load-balancer-controller
  generation: 1
  labels:
    app: gitops-nginx-ingress
  name: gitops-ingress
  namespace: gitops
spec:
  rules:
  - http:
      paths:
      - backend:
          service:
            name: gitops-ingress-controller-svc
            port:
              number: 3443
        path: /*
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - optic.dev.gitops.com
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-internal: "true"
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
    updated-per-mf-deployment-docs-by-glg: "true"
  creationTimestamp: "2022-09-01T19:38:11Z"
  labels:
    app: gitops-ingress
  name: gitops-ingress-controller-svc
  namespace: gitops
spec:
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: https
    nodePort: 30443
    port: 3443
    protocol: TCP
    targetPort: 3443
  selector:
    app.kubernetes.io/instance: gitops-ingress
    app.kubernetes.io/name: gitops-ingress-controller
  sessionAffinity: None
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "15"
    deployment.microfocus.com/default-replica-count: "2"
    deployment.microfocus.com/runlevel: STANDBY
    deployment.microfocus.com/simple-update: ignore
  generation: 1
  labels:
    app.kubernetes.io/instance: gitops-ingress
    app.kubernetes.io/name: gitops-ingress-controller
  name: gitops-ingress-controller
  namespace: gitops
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app.kubernetes.io/instance: gitops-ingress
      app.kubernetes.io/name: gitops-ingress-controller
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: gitops-ingress
        app.kubernetes.io/name: gitops-ingress-controller
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app.kubernetes.io/name
                  operator: In
                  values:
                  - gitops-ingress-controller
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args:
        - /nginx-ingress-controller
        - --default-ssl-certificate=core/nginx-default-secret
        - --v=0
        - --configmap=core/portal-ingress-controller-conf
        - --watch-namespace=core
        - --annotations-prefix=ingress.kubernetes.io
        - --enable-ssl-chain-completion=false
        - --http-port=8080
        - --https-port=8443
        - --update-status=false
        - --ingress-class=nginx
        - --metrics-per-host=false
        image: nginx/nginx-ingress:2.4.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /healthz
            port: 10254
            scheme: HTTP
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: nginx-ingress-lb
        resources:
          limits:
            cpu: 1500m
            memory: 500Mi
          requests:
            cpu: 100m
            memory: 200Mi
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1999
        runAsGroup: 1999
        runAsUser: 1999
        supplementalGroups:
        - 1999
      serviceAccount: gitops-ingress-controller
      serviceAccountName: gitops-ingress-controller
      terminationGracePeriodSeconds: 30


'''
EOT
'''

#---
#apiVersion: networking.k8s.io/v1
#kind: Ingress
#metadata:
#  name: gitops-ingress-controller
#  namespace: gitops
#  annotations:
#    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:us-east-1:713745958112:certificate/4210d4fc-eb24-458b-b2ee-4585f0597b25
#    alb.ingress.kubernetes.io/group.name: gitops-ingress
#    alb.ingress.kubernetes.io/inbound-cidrs: 0.0.0.0/0
#    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 3443}]'
#    alb.ingress.kubernetes.io/scheme: internet-facing
#    alb.ingress.kubernetes.io/security-groups: sg-07b50b1828b7e5f53,sg-038defe967d41af3d,sg-05a1424bec076e55c,sg-0495853efd8389edb
#    alb.ingress.kubernetes.io/success-codes: 200-399
#    alb.ingress.kubernetes.io/target-type: instance    
#    ingress.kubernetes.io/enable-cors: "true"
#    kubernetes.io/ingress.class: alb
#  finalizers:
#  - group.ingress.k8s.aws/aws-load-balancer-controller
#spec:
#  rules:
#  - http:
#      paths:
#      - backend:
#          service:
#            name: gitops-ingress-svc
#            port:
#              number: 3031
#        path: /*
#        pathType: ImplementationSpecific

#---
#apiVersion: v1
#kind: Namespace
#metadata:
#  name: gitops
#  labels:
#    app.kubernetes.io/name: gitops
#    app.kubernetes.io/instance: gitops

---
# Source: ingress-nginx/templates/controller-service-webhook.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: gitops-nginx-ingress
    app.kubernetes.io/instance: gitops-nginx-ingress
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: gitops-nginx-ingress-controller-admission
  namespace: gitops
spec:
  type: ClusterIP
  ports:
    - name: https-webhook
      port: 443
      targetPort: webhook
  selector:
    app.kubernetes.io/name: gitops-nginx-ingress
    app.kubernetes.io/instance: gitops-nginx-ingress
    app.kubernetes.io/component: controller
---
# Source: ingress-nginx/templates/controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-backend-protocol: tcp
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: '60'
    service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: 'true'
    service.beta.kubernetes.io/aws-load-balancer-type: nlb
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: gitops-nginx-ingress
    app.kubernetes.io/instance: gitops-nginx-ingress
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: gitops-nginx-ingress-controller
  namespace: gitops
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
    - name: https
      port: 443
      protocol: TCP
      targetPort: https
  selector:
    app.kubernetes.io/name: gitops-nginx-ingress
    app.kubernetes.io/instance: gitops-nginx-ingress
    app.kubernetes.io/component: controller
---
# Source: ingress-nginx/templates/controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: gitops-nginx-ingress
    app.kubernetes.io/instance: gitops-nginx-ingress
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: controller
  name: gitops-nginx-ingress-controller
  namespace: gitops
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: gitops-nginx-ingress
      app.kubernetes.io/instance: gitops-nginx-ingress
      app.kubernetes.io/component: controller
  revisionHistoryLimit: 10
  minReadySeconds: 0
  template:
    metadata:
      labels:
        app.kubernetes.io/name: gitops-nginx-ingress
        app.kubernetes.io/instance: gitops-nginx-ingress
        app.kubernetes.io/component: controller
    spec:
      dnsPolicy: ClusterFirst
      containers:
        - name: controller
          image: quay.io/kubernetes-ingress-controller/nginx-ingress-controller:0.32.0
          imagePullPolicy: IfNotPresent
          lifecycle:
            preStop:
              exec:
                command:
                  - /wait-shutdown
          args:
            - /nginx-ingress-controller
            - --publish-service=gitops/gitops-nginx-ingress-controller
            - --election-id=ingress-controller-leader
            - --ingress-class=nginx
            - --configmap=gitops/gitops-nginx-ingress-controller
            - --validating-webhook=:8443
            - --validating-webhook-certificate=/usr/local/certificates/cert
            - --validating-webhook-key=/usr/local/certificates/key
          securityContext:
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            runAsUser: 101
            allowPrivilegeEscalation: true
          livenessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /healthz
              port: 10254
              scheme: HTTP
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 1
            successThreshold: 1
            failureThreshold: 3
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
            - name: https
              containerPort: 443
              protocol: TCP
            - name: webhook
              containerPort: 8443
              protocol: TCP
          volumeMounts:
            - name: webhook-cert
              mountPath: /usr/local/certificates/
              readOnly: true
          resources:
            requests:
              cpu: 100m
              memory: 90Mi
      serviceAccountName: gitops-nginx-ingress
      terminationGracePeriodSeconds: 300
      volumes:
        - name: webhook-cert
          secret:
            secretName: gitops-nginx-ingress-admission
---
# Source: ingress-nginx/templates/admission-webhooks/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1beta1
kind: ValidatingWebhookConfiguration
metadata:
  labels:
    helm.sh/chart: ingress-nginx-2.0.3
    app.kubernetes.io/name: gitops-nginx-ingress
    app.kubernetes.io/instance: gitops-nginx-ingress
    app.kubernetes.io/version: 0.32.0
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: admission-webhook
  name: gitops-nginx-ingress-admission
  namespace: gitops
webhooks:
  - name: validate.nginx.ingress.kubernetes.io
    rules:
      - apiGroups:
          - extensions
          - networking.k8s.io
        apiVersions:
          - v1beta1
        operations:
          - CREATE
          - UPDATE
        resources:
          - ingresses
    failurePolicy: Fail
    clientConfig:
      service:
        namespace: gitops
        name: gitops-nginx-ingress-controller-admission
        path: /extensions/v1beta1/ingresses
